"Integer.valueOf(int)" is not pre-Java 5 compatible. Replaced with "new Integer(int)".